--- a/css/about.css
+++ b/css/about.css
@@ -10,7 +10,7 @@ main {
     height: auto;
     justify-content: flex-start;
     display: flex;
-    background-color: #1f242d;
+    background-color: #020917;
     align-items: center;
     padding: 10px 10% 0;
     padding-top: 5%;
